syntax = "proto3";

option go_package = "github.com/Fankhauserli/GO_Test_grpc/TodoGrpc";

package TodoGrpc;

// The greeting service definition.
service toDo {
  // Sends a greeting
  rpc createTodoService (TodoRequest) returns (TodoResponse) {}
  rpc deleteTodoService (TodoQuery) returns (Todo) {}
  rpc getAllTodosService (null) returns (stream Todo) {}
  rpc getTodoByIDService (TodoQuery) returns (Todo) {}
  rpc updateTodoService (Todo) returns (Todo) {}
}

message null {}


// The request message containing the user's name.
message TodoRequest {
  string Description = 1;
}

// The response message containing the greetings
message Todo {
  int32 Id = 1;
  string Description = 2;
}


message TodoResponse {
  int32 Id = 1;
}

// the query by id
message TodoQuery {
  int32 Id = 1;
}